<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <!-- 하-->
    <!-- 루-->
    <!-- 의-->

    <!-- 루-->
    <!-- 틴-->
    <!-- 을-->

    <!-- HARUTINE -->

    <TextView
        android:id="@+id/some_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id22"
        android:textAppearance="@style/some_id"
        android:textColor="#0085FF"
        app:layout_constraintStart_toEndOf="@+id/some_id11"
        app:layout_constraintTop_toTopOf="@+id/some_id11"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id1"
        android:textAppearance="@style/some_id"
        android:textColor="#0085FF"
        app:layout_constraintBaseline_toBaselineOf="@+id/some_id11"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id111"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toBottomOf="@+id/some_id222"
        app:layout_constraintStart_toEndOf="@+id/some_id2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="366dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id3"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/harutine"
        app:layout_constraintEnd_toStartOf="@+id/some_id111"
        app:layout_constraintStart_toStartOf="@+id/some_id111"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id11"
        android:textAppearance="@style/some_id"
        android:textColor="#FFD705"
        app:layout_constraintBottom_toTopOf="@+id/some_id3"
        app:layout_constraintStart_toEndOf="@+id/some_id1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id"
        android:textColor="#FFD705"
        app:layout_constraintBaseline_toBaselineOf="@+id/some_id2"
        app:layout_constraintStart_toEndOf="@+id/some_id1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/some_id222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/notosans_regular"
        android:gravity="top"
        android:lineSpacingExtra="-34sp"
        android:text="@string/some_id222"
        android:textAppearance="@style/some_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/some_id2"
        app:layout_constraintStart_toStartOf="@+id/some_id111"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="182dp"
        android:layout_height="274dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/harutine"
        app:srcCompat="@drawable/group_48096236__1_"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/harutine"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/harutine"
        android:textAppearance="@style/harutine"
        android:textColor="#898B95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id3"
        tools:ignore="MissingConstraints" />
    <!--
    Font family: Noto Sans KR
    Line height: 10sp
    -->
    <!--
    Font family: Noto Sans
    Line height: 10sp
    -->

</androidx.constraintlayout.widget.ConstraintLayout>